			Java Electric change log

NOTE: Please place changes under the version that will be released next.

IMP: (10/22/04, DN) Network calculation is always performed in change thread.
  GUI thread can either "getUserNetlist" and wait until it is ready, or
  "acquireUserNetlist" and obtain "null" if it is not ready.

************************* Version 8.01ac: *********************************

IMP: (10/22/04, SMR) Improved speed of arraying and re-exporting by improving speed of
     finding a unique name in a cell.

IMP: (10/21/04, SMR) Array no longer sets names when they are only temporary.

************************* Version 8.01ab: *********************************

BUG: (10/21/04, GVG) DRC and cropping. After removing rounding in calcBound, cropping function
     was not working properly in DRC.
FIX: DBMath.isGreaterThan instead of "<=".

IMP: (10/21/04, SMR) JELIB reader checks that cells with the same name are in the same group.

IMP: (10/21/04, SMR) Made cell groups have sensible names so that it is easier to rearrange them.

IMP: (10/21/04, SMR) Closed bugs in JELIB format: handles "(" in variable names;
     handles newline in strings.

IMP: (10/21/04, SMR) Deleting a library (or re-reading it) checks to make sure that
     none of the former library has cells that are in use elsewhere.

IMP: (10/21/04, SMR) Selecting a signal in the schematic shows all equivalents in the waveform window.

IMP: (10/21/04, GVG) Cross-shaped contacts in TSMC90 including multiple cuts.

IMP/MAN: (10/21/04, SMR) Added "CIF" input.

IMP: (10/20/04, DN) Deprectated those variables on Technology, Tool,
     View, PrimitiveNode/Arc/Part objects which are not meaningful preferences.

IMP: (10/20/04, SMR) Now preserving the "main schematic" for a cell group.
     Also saving and restoring it through "jelib" files.
     Explorer tree has command for setting "main schematic".

************************* Version 8.01aa: *********************************
